updates to allow the compiler to check tests after compiling