@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -19,7 +20,7 @@
 		<github.project.name>ClosureJavascriptFramework</github.project.name>
 		<maven.version>3.0.1</maven.version>
 		<maven.project.version>3.0-alpha-2</maven.project.version>
-		<maven-checkstyle-plugin.version>2.7</maven-checkstyle-plugin.version>
+		<maven-checkstyle-plugin.version>2.9</maven-checkstyle-plugin.version>
 		<maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
 		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
 		<maven-surefire-plugin.version>2.10</maven-surefire-plugin.version>
@@ -45,6 +46,7 @@
 		<groovy.version>1.7</groovy.version>
 		<groovy.full.version>1.7.5</groovy.full.version>
 		<spock.to.groovy.version>0.4-groovy-1.7</spock.to.groovy.version>
+		<target.jdk>1.5</target.jdk>
 	</properties>
 
 	<dependencies>
@@ -124,6 +126,65 @@
 				<goal>compile</goal> <goal>generateTestStubs</goal> <goal>testCompile</goal> 
 				</goals> </execution> </executions> </plugin> -->
 
+			<!-- need to turn this on at some point -->
+			<!-- COBERTURA: Code Coverage Check -->
+			<!-- plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-maven-plugin.version}</version>
+				<configuration>
+					<check>
+						<haltOnFailure>true</haltOnFailure>
+						<branchRate>50</branchRate>
+						<lineRate>50</lineRate>
+						<totalBranchRate>50</totalBranchRate>
+						<totalLineRate>50</totalLineRate>
+						<packageLineRate>50</packageLineRate>
+						<packageBranchRate>50</packageBranchRate>
+					</check>
+					<formats>
+						<format>html</format>
+					</formats>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>clean</goal>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin -->
+
+			<!-- Check Style: Make sure that it matches basic formatting and usage 
+						requirements -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${maven-checkstyle-plugin.version}</version>
+				<configuration>
+					<configLocation>https://raw.github.com/jlgrock/ClosureJavascriptFramework/master/checkstyle.xml</configLocation>
+					<failsOnError>true</failsOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
 			<!-- Source Files -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -202,7 +263,7 @@
 							<version>${cobertura-maven-plugin.version}</version>
 							<configuration>
 								<check>
-									<haltOnFailure>true</haltOnFailure>
+									<haltOnFailure>false</haltOnFailure>
 								</check>
 								<formats>
 									<format>xml</format>
@@ -215,6 +276,7 @@
 							<artifactId>maven-checkstyle-plugin</artifactId>
 							<version>${maven-checkstyle-plugin.version}</version>
 							<configuration>
+								<configLocation>https://raw.github.com/jlgrock/ClosureJavascriptFramework/master/checkstyle.xml</configLocation>
 								<failsOnError>false</failsOnError>
 							</configuration>
 						</plugin>
@@ -279,6 +341,90 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>codeQuality</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<excludedGroups>integration</excludedGroups>
+							<argLine>-XX:MaxPermSize=512M -Xmx512m</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+					</plugin>
+					<!-- COBERTURA: Code Coverage Check -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<configuration>
+							<check>
+								<haltOnFailure>false</haltOnFailure>
+							</check>
+							<formats>
+								<format>html</format>
+							</formats>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>clean</goal>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- FINDBUGS CHECK: Fails build if there are "High" threshold violations -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>findbugs-maven-plugin</artifactId>
+						<version>${findbugs.version}</version>
+						<configuration>
+							<effort>Max</effort>
+							<threshold>High</threshold>
+							<xmlOutput>true</xmlOutput>
+							<failOnError>true</failOnError>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- PMD CHECK: Fails build if there are "High" priority violations -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-pmd-plugin</artifactId>
+						<version>${pmd.version}</version>
+						<configuration>
+							<targetJdk>${target.jdk}</targetJdk>
+							<failurePriority>1</failurePriority>
+							<failOnViolation>true</failOnViolation>
+							<aggregate>true</aggregate>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.sonar</groupId>
+						<artifactId>sonar-maven3-plugin</artifactId>
+						<version>2.4.1</version>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<scm>
@@ -302,5 +448,5 @@
 			<email>jlgrock@hotmail.com</email>
 		</developer>
 	</developers>
-	
+
 </project>
